bill-nginx-alb-frontend.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "nginx-ingress-frontend"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: bil-webfrontend-ingress
spec:
  rules:
     - http:
        paths:
          - path: /*
            backend:
              serviceName: "bil-webfrontend-service"
              servicePort: 80
